--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Hêllẞø†",
-  "description": "The best userbot made by @Kraken_The_BadASS. Made with Love And Phone And Hardwork and... Nhi aur kahi se to nhi bana....For Support Join @HellBot_Official ",
-  "logo": "https://telegra.ph/file/7decf235312af8536e9aa.jpg ",
+  "name": "THUG",
+  "description": "The best userbot made by @THUG. Made with Love And Phone And Hardwork and... Nhi aur kahi se to nhi bana....For Support Join @HellBot_Official ",
+  "logo": "https://telegra.ph/file/f3bba44db6bcf3cec66c2.jpg ",
     "keywords": [
     "telegram",
     "userbot",
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/HellBoy-OP/HellBot/",
+  "repository": "https://github.com/THUSOFFICIALS/THUG",
   "website": "https://github.com/HellBoy-OP/HellBot/",
   "success_url": "https://t.me/HellBot_Official",
   "env": {
